HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumGenericUnbounded/Expected.uv
//! Expected diagnostic metadata for the FfiSafeEnumGenericUnbounded rejected-source specimen.

expectedDiagnostic("E-TYP-2629", "rule.23.FfiSafe-Enum-Generic-Unbounded-Err")
